--- a/frontend/economius/src/App.css
+++ b/frontend/economius/src/App.css
@@ -1,14 +1,23 @@
+@font-face {
+  font-family: "netmarbleB";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.1/netmarbleB.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  font-family: "netmarbleB";
 }
 
 #root {
-    width: 100%;
-    height: 100%;
-    background-image: url('bg-black.png');
-    background-size: 180%;
-    background-position: 68% 32%;
+  width: 100%;
+  height: 100%;
+  background-image: url("bg-black.png");
+  background-size: 180%;
+  background-position: 68% 32%;
 }
 
 /* canvas {
