--- a/frontend/economius/src/App.css
+++ b/frontend/economius/src/App.css
@@ -1,23 +1,28 @@
 @font-face {
-  font-family: "netmarbleB";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.1/netmarbleB.woff")
-    format("woff");
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'netmarbleB';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.1/netmarbleB.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "netmarbleB";
+    margin: 0;
+    padding: 0;
+    font-family: 'netmarbleB';
+}
+
+body {
+    max-width: 1920px;
+    max-height: 1080px;
+    margin: auto;
 }
 
 #root {
-  width: 100%;
-  height: 100%;
-  background-image: url("bg-black.png");
-  background-size: 180%;
-  background-position: 68% 32%;
+    width: 100%;
+    height: 100%;
+    background-image: url('bg-black.png');
+    background-size: 180%;
+    background-position: 68% 32%;
 }
 
 /* canvas {
@@ -30,3 +35,26 @@ width: 100%;
 height: 100vh;
 padding-bottom: 56.24%;
 } */
+
+@media screen and (min-width: 1920px) {
+    body {
+        max-width: 1920px;
+        margin: auto;
+    }
+}
+@media screen and (max-width: 1919px) {
+    body {
+        max-width: 100%;
+    }
+}
+@media screen and (min-height: 1080px) {
+    body {
+        max-height: 1080px;
+        margin: auto;
+    }
+}
+@media screen and (max-width: 1079px) {
+    body {
+        max-height: 100%;
+    }
+}
