--- a/frontend/economius/src/index.css
+++ b/frontend/economius/src/index.css
@@ -16,7 +16,7 @@ video {
     height: 100%;
     top: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
