--- a/frontend/economius/src/App.css
+++ b/frontend/economius/src/App.css
@@ -12,22 +12,23 @@
 }
 
 body {
-    max-width: 1920px;
-    max-height: 1080px;
+    width: 100%;
+    /* max-width: 1920px; */
+    /* max-height: 1080px; */
     margin: auto;
 }
 
 ::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
-#root {
+/* #root {
     width: 100%;
     height: 100%;
     background-image: url('bg-black.png');
     background-size: 180%;
     background-position: 68% 32%;
-}
+} */
 
 /* canvas {
 width: 100%;
@@ -40,7 +41,7 @@ height: 100vh;
 padding-bottom: 56.24%;
 } */
 
-@media screen and (min-width: 1920px) {
+/* @media screen and (min-width: 1920px) {
     body {
         max-width: 1920px;
         margin: auto;
@@ -61,4 +62,4 @@ padding-bottom: 56.24%;
     body {
         max-height: 100%;
     }
-}
+} */
