feat: 방장 여부에 따라서 시작 버튼 활성, 비활성화 & 방장 여부 및 방 인원 확인 기능

--- a/frontend/economius/src/index.css
+++ b/frontend/economius/src/index.css
@@ -20,3 +20,24 @@ video {
     justify-content: center;
     align-items: flex-end;
 }
+
+/* .overlay-outer {
+    position: relative;
+} */
+
+.overlay-inner {
+    position: absolute;
+    bottom: -0px; /* 오버레이를 텍스트 아래에 위치시킵니다. */
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* 오버레이 배경색과 투명도 조절 */
+    color: white; /* 오버레이 텍스트 색상 설정 */
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px; /* 오버레이 모서리 둥글게 만듭니다. */
+    display: none; /* 초기에 숨김 */
+}
+
+.overlay-outer:hover .overlay-inner {
+    display: block;
+}
