--- a/frontend/economius/src/App.css
+++ b/frontend/economius/src/App.css
@@ -10,6 +10,7 @@
     padding: 0;
     font-family: 'netmarbleB';
     user-select: none;
+    cursor: url('/cursor/1.png') 30 30, auto;
 }
 
 body {
